# clash-royale-complete

./: .dockerignore  .gitignore  ARCHITECTURE_AND_ISSUES.md  DREAMER_OVERVIEW.md  README.md
clash-royale-mbrl/: DREAMERV3_MIGRATION.md  README.md  REFRACTOR_PLAN.md  env_setup.txt  play_live.py  play_paper.py  pyproject.toml  requirements-apple-silicon.txt  requirements-frozen.txt  setup.sh  train.py  train_dreamer.py  train_dreamerv3.py  train_live.py  train_live_old.py  train_offline.py  train_offline_fast.py  train_online.py  train_paper.py
clash-royale-mbrl/logs_online/smoke_20260104_123250/run_0/: events.out.tfevents.1767526373.Host-004.homenet.telecomitalia.it.70760.0  params.json  progress.csv
clash-royale-mbrl/proto/: frame_service.proto
clash-royale-mbrl/scripts/: benchmark_capture.py  capture_perception_snapshot.py  download_weights.py  gen_protos.sh  goto_training_camp.py  hive_install_apk.sh  hive_up.sh  interactive_setup.py  mac_machineb_run.sh  quick_start.py  remote_client_loop.py  rpc_smoketest.py  serve_frame_service.py  tfevents_to_csv.py  validate_dumps.py  vm_hive_setup.sh  vm_machinea_up.sh
clash-royale-mbrl/src/: __init__.py  specs.py
clash-royale-mbrl/src/agent/: __init__.py  dreamer_agent.py  dreamer_model.py  dreamer_trainer.py  dreamer_v3.py
clash-royale-mbrl/src/cr/rpc/v1/: client.py  frame_service_pb2.py  frame_service_pb2.pyi  server.py  (+2 more)
clash-royale-mbrl/src/environment/: __init__.py  action_mask.py  action_utils.py  embodied_env.py  emulator_env.py  hive_env.py  online_env.py  remote_bridge.py  state_encoder.py
clash-royale-mbrl/src/perception/: __init__.py  detection.py  katacr_adapter.py  katacr_pipeline.py
clash-royale-mbrl/src/utils/: __init__.py  device.py  window_finder.py
(+51 files in other folders)
