[project]
name = "clash-royale-mbrl"
version = "0.1.0"
description = "Model-Based Reinforcement Learning for Clash Royale on Apple Silicon"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["reinforcement-learning", "dreamer", "clash-royale", "apple-silicon", "mps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.1.24",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "einops>=0.8.0",
    "mss>=9.0.1",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pure-python-adb>=0.3.0.dev0",
    "gymnasium>=0.29.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "easyocr>=1.7.0",
    "moviepy>=1.0.3",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
wandb = [
    "wandb>=0.16.0",
]

[project.scripts]
train = "train:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
